<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/icStar"
        android:title="Start"
        android:icon="@drawable/start"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/itContacto"
        android:title="@string/app_contacto"
        android:orderInCategory="100"
        ></item>
    <item
        android:id="@+id/itAcercaDe"
        android:title="@string/app_acercade"
        android:orderInCategory="100"
        ></item>
    <item
        android:id="@+id/itEnviarNoti"
        android:title="@string/app_enviarnoti"
        android:orderInCategory="100" />
    <item
        android:id="@+id/itRecibirNoti"
        android:title="@string/app_recibirnoti"
        android:orderInCategory="100" />
    <item
        android:id="@+id/itMiUbicacion"
        android:title="@string/app_miUbicacion"
        android:orderInCategory="100" />
    <item
        android:id="@+id/itRecibirNotificaciones"
        android:title="@string/app_recibirnotificaciones"
        android:orderInCategory="100" />
    <item
        android:id="@+id/itLogout"
        android:title="@string/app_logout"
        android:orderInCategory="100"
        ></item>
</menu>